--- a/WebContent/WEB-INF/html/express/index.html
+++ b/WebContent/WEB-INF/html/express/index.html
@@ -3,12 +3,148 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link href="../css/bootstrap.css" type="text/css" rel="stylesheet"
-	media="all">
+<link href="../css/bootstrap.css" type="text/css" rel="stylesheet">
+<link href="../css/jquery.vegas.min.css" type="text/css"
+	rel="stylesheet" />
+<link href="../css/style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="../js/jquery.min.js"></script>
 <script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
 </head>
-<body>
-	
+<body data-spy="scroll" data-target="#menu" style="overflow:hidden">
+	<div class="navbar navbar-inverse navbar-fixed-top scrollclass"
+		id="menu">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target=".navbar-collapse">
+					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#home" style="font-size: 30pt;">矿大物流</a>
+			</div>
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#home">首页</a></li>
+					<li><a href="#express">取件</a></li>
+					<li><a href="#services">其他服务</a></li>
+					<li><a href="#contact">联系我们</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div id="home">
+		<div class="container">
+			<div class="row">
+				<div
+					class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 ">
+					<div id="carousel-slider" data-ride="carousel"
+						class="carousel slide">
+						<div class="carousel-inner">
+							<div class="item active">
+								<h1>矿大物流，给你更舒适的快递服务</h1>
+							</div>
+							<div class="item">
+								<h1>更方便，更快捷</h1>
+							</div>
+							<div class="item">
+								<h1>一切为您</h1>
+							</div>
+						</div>
+						<!--INDICATORS-->
+						<ol class="carousel-indicators">
+							<li data-target="#carousel-slider" data-slide-to="0"
+								class="active"></li>
+							<li data-target="#carousel-slider" data-slide-to="1"></li>
+							<li data-target="#carousel-slider" data-slide-to="2"></li>
+						</ol>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div
+					class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2  scrollclass">
+					<p>V 1.0</p>
+					<br /> <a href="#express" class="btn  btn-lg custom-btn-1"><i
+						class="fa fa-home"></i><span class="glyphicon glyphicon-user"></span>取件
+					</a> <a href="#services" class="btn  btn-lg custom-btn-1"><i
+						class="fa fa-comments-o"></i><span
+						class="glyphicon glyphicon-user"></span> 其他服务 </a><a href="#contact"
+						class="btn btn-lg custom-btn-1"><i class="fa fa-globe"></i> <span
+						class="glyphicon glyphicon-envelope"></span>联系我们 </a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr />
+	<section id="express">
+		<div class="container">
+			<div class="row">
+				<div
+					class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2  text-center">
+					<h2>取件</h2>
+				</div>
+			</div>
+			<br />
+			<div class="row">
+				<div
+					class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1  text-center">
+					<form class="form-inline" id="params">
+						<label>日期</label>
+						<div class="form-group">
+							<input id="arriveDate" type="date" class="form-control" />
+						</div>
+						<label>快递单号</label>
+						<div class="form-group">
+							<input id="expressNo" class="form-control" type="text"
+								maxlength="15" required="required" placeholder="输入快递单号" />
+						</div>
+						<label>手机号</label>
+						<div class="form-group">
+							<input id="phoneNumber" class="form-control" type="tel"
+								maxlength="11" required="required" placeholder="输入手机号" />
+						</div>
+						<button id="searchButton" class="btn btn-default" type="button">
+							<span class="glyphicon glyphicon-search"></span>Search
+						</button>
+					</form>
+				</div>
+			</div>
+			<div class="row" style="padding-top: 200px">
+				<div
+					class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2  text-center">
+					<div class="media">
+						<div class="pull-left">
+							<i class=" fa fa-fax fa-4x"></i>
+						</div>
+						<div class="media-body">
+							<h3 class="media-heading">温馨提示</h3>
+							<p>1.输入手机号或订单号进行查询，查询您所存放的快件信息.2.输入发送至你手机上的手机号密码，进行取件.3.若忘记密码，可点击重发密码发送至您手机上</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="searchModal" class="modal fade">
+				<div class="modal-dialog" style="width: 80%;color:black">
+					<div class="modal-content"></div>
+				</div>
+			</div>
+		</div>
+		</div>
+	</section>
+	<script type="text/javascript">
+	$(function() {
+		$('#searchButton').click(function() {
+			// add my code here
+			Express.getExpressList();
+		});
+	});
+	</script>
+	<!-- 业务逻辑js引入方式 -->
+	<script type="text/javascript" src="../express_js/Express.js"></script>
+	<!-- EASING SCROLL SCRIPTS PLUGIN  -->
+	<script src="../js/vegas/jquery.vegas.min.js"></script>
+	<!-- VEGAS SLIDESHOW SCRIPTS  -->
+	<script src="../js/jquery.easing.min.js"></script>
+	<script src="../js/vegas-custom.js"></script>
 </body>
 </html>
