--- a/WebContent/WEB-INF/html/express/index.html
+++ b/WebContent/WEB-INF/html/express/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="../js/jquery.min.js"></script>
 <script type="text/javascript" src="../js/bootstrap-3.1.1.min.js"></script>
 </head>
-<body data-spy="scroll" data-target="#menu" style="overflow:hidden">
+<body data-spy="scroll" data-target="#menu" style="overflow: hidden">
 	<div class="navbar navbar-inverse navbar-fixed-top scrollclass"
 		id="menu">
 		<div class="container">
@@ -101,7 +101,7 @@
 						<label>手机号</label>
 						<div class="form-group">
 							<input id="phoneNumber" class="form-control" type="tel"
-								maxlength="11" required="required" placeholder="输入手机号" />
+								maxlength="11" required="required" placeholder="输入手机号" value="18319040556" />
 						</div>
 						<button id="searchButton" class="btn btn-default" type="button">
 							<span class="glyphicon glyphicon-search"></span>Search
@@ -124,7 +124,12 @@
 				</div>
 			</div>
 			<div id="searchModal" class="modal fade">
-				<div class="modal-dialog" style="width: 80%;color:black">
+				<div class="modal-dialog" style="width: 80%; color: black">
+					<div class="modal-content"></div>
+				</div>
+			</div>
+			<div id="expressModal" class="modal fade">
+				<div class="modal-dialog" style="width: 50%; color: black">
 					<div class="modal-content"></div>
 				</div>
 			</div>
