新增管理员发送邮件操作

--- a/WebContent/WEB-INF/html/admin/sap.html
+++ b/WebContent/WEB-INF/html/admin/sap.html
@@ -523,7 +523,7 @@
                                     <td>{{e.status}}</td>
                                     <td>
                                         <button type="button" class="btn btn-primary" @click="openModal(e)">修改</button>
-                                        <button type="button" class="btn btn-primary" >通知</button>
+                                        <button type="button" class="btn btn-primary" @click="notification(e)">通知</button>
                                     </td>
                                 </tr>
                                 </tbody>
