--- a/WebContent/WEB-INF/html/admin/sap.html
+++ b/WebContent/WEB-INF/html/admin/sap.html
@@ -283,23 +283,12 @@
                                 </ul>
                                 <!-- /.nav-second-level -->
                             </li>
-                            <li>
-                                <a href="#"><i class="fa fa-wrench fa-fw"></i>快件管理<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <router-link to="/overdue"><i class="fa fa-dashboard fa-fw"></i>快件录入</router-link>
-                                    </li>
-                                    <li>
-                                        <router-link to="/overdue"><i class="fa fa-dashboard fa-fw"></i>快件维护</router-link>
-                                    </li>
-                                </ul>
-                                <!-- /.nav-second-level -->
-                            </li>
+
                             <li>
                                 <a href="#"><i class="fa fa-wrench fa-fw"></i>货柜管理<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <router-link to="/overdue"><i class="fa fa-dashboard fa-fw"></i>当日货柜管理</router-link>
+                                        <router-link to="/shelf"><i class="fa fa-dashboard fa-fw"></i>当日货柜管理</router-link>
                                     </li>
                                     <li>
                                         <router-link to="/overdue"><i class="fa fa-dashboard fa-fw"></i>隔日货柜管理</router-link>
@@ -327,9 +316,8 @@
             <div class="col-lg-12">
                 <h1 class="page-header">查询快递</h1>
             </div>
-            <!--模态框-->
+            <!--录入快件的模态框-->
             <div class="modal fade" id="createExpressModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -387,13 +375,13 @@
                     </div>
                 </div>
             </div>
+            <!--点击修改快件的弹框-->
             <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
-
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title" id="updateModalLabel" >修改快件</h4>
+                            <h4 class="modal-title"  >修改快件</h4>
                         </div>
                         <div class="modal-body">
                             <form>
@@ -446,11 +434,56 @@
                     </div>
                 </div>
             </div>
-            <!--组件模版-->
+
+
+            <!--点击快递单号的模态框-->
+            <div class="modal fade bs-example-modal-sm" id="shelfLocation" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+                <div class="modal-dialog modal-sm" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title">快递的货柜</h4>
+                        </div>
+                        <div class="modal-body">
+                            <input type="hidden" v-model="shelf"/>
+                            <p v-if="shelf.shelfId!=null">该快件存放于{{shelf.shelfId}}号货柜</p>
+                            <p v-else>该快件未放入货柜</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">关闭</button>
+                            <input type="hidden" />
+                            <button v-if="shelf.shelfId==null" type="button" class="btn btn-primary"  @click="putIntoShelf()">放入货柜</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--点击放入货柜后的弹框-->
+            <div class="modal fade bs-example-modal-sm" id="responseLocation" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+                <div class="modal-dialog modal-sm" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title">快递的货柜</h4>
+                        </div>
+                        <div class="modal-body">
+                            <input type="hidden" v-model="shelf"/>
+                            <p v-if="shelf.shelfId!=null">成功放入！该快件存放于{{shelf.shelfId}}号货柜</p>
+                            <p v-else>没有空余的货柜</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">关闭</button>
+                            <input type="hidden" />
+                            <button v-if="shelf.shelfId==null" type="button" class="btn btn-primary"  @click="putIntoShelf()">放入货柜</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!--快件查询表头、结果列表模版-->
         <form class="form-inline" id="params">
                     <label>寄件日期</label>
                     <div class="form-group">
-                        <input  type="text" class="form-control"  v-model="express.fromDate"/>
+                        <input  type="date" class="form-control"  v-model="express.fromDate"/>
                     </div>
                     <label>到达日期</label>
                     <div class="form-group">
@@ -476,6 +509,15 @@
                         <input  id="phoneNumber" class="form-control" type="tel"
                                maxlength="11" required="required" placeholder="输入手机号" v-model="express.contact"/>
                     </div>
+                    <label>快递状态</label>
+                    <div class="form-group">
+                        <select  v-model="express.status" class="form-control">
+                            <option>N</option>
+                            <option>W</option>
+                            <option>S</option>
+                            <option>F</option>
+                        </select>
+                    </div>
 
                     <button id="searchButton" class="btn btn-primary" type="button" @click="getExpressList()" >
                         <span class="glyphicon glyphicon-search"></span>查询
@@ -493,7 +535,7 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <table width="100%" class="table table-striped table-bordered table-hover">
                                 <thead >
                                 <th class="text-center" rowspan="2">快递单号</th>
                                 <th class="text-center" rowspan="2">快递公司</th>
@@ -508,14 +550,14 @@
                                 <th class="text-center" rowspan="2">快递状态</th>
                                 <th class="text-center" rowspan="2">操作</th>
                                 </thead>
-                                <tbody class="table-hover" v-for="e in expresses" id="tby" ref="menuItem">
+                                <tbody class="table-hover" v-for="e in expresses" id="tby" >
                                 <tr class="active">
-                                    <td >{{e.expressNo}}</td>
+                                    <td ><a href="javascript:void (0)" @click="showShelfLocation(e)">{{e.expressNo}}</a></td>
                                     <td>{{e.company}}</td>
                                     <td>{{e.consignee}}</td>
-                                    <td >{{e.fromDate}}</td>
-                                    <td >{{e.arriveDate}}</td>
-                                    <td >{{e.receiveDate}}</td>
+                                    <td>{{e.fromDate}}</td>
+                                    <td>{{e.arriveDate}}</td>
+                                    <td>{{e.receiveDate}}</td>
                                     <td>{{e.contact}}</td>
                                     <td>{{e.emailAddress}}</td>
                                     <td>{{e.addressSource}}</td>
@@ -541,7 +583,161 @@
             <!--</div>-->
         </div>
     </script>
-    <script type="text/template" id="about">
+    <script type="text/x-template" id="query-shelf">
+        <div class="col-lg-9 col-lg-offset-2 col-md-9 col-md-offset-2 col-sm-9 col-sm-offset-2  text-center">
+            <div class="col-lg-12">
+                <h1 class="page-header">查询货柜</h1>
+            </div>
+            <!--录入快件的模态框-->
+            <!--<div class="modal fade" id="createShelfModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">-->
+                <!--<div class="modal-dialog" role="document">-->
+                    <!--<div class="modal-content">-->
+                        <!--<div class="modal-header">-->
+                            <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
+                            <!--<h4 class="modal-title"  >新增货柜</h4>-->
+                        <!--</div>-->
+                        <!--<div class="modal-body">-->
+                            <!--<form>-->
+                                <!--<div class="form-group">-->
+                                    <!--<label for="consignee" class="control-label">收件人</label>-->
+                                    <!--<input type="text" class="form-control"  v-model="newExpress.consignee" placeholder="输入快递单号">-->
+                                <!--</div>-->
+                                <!--<div class="form-group">-->
+                                    <!--<label for="expressNumber" class="control-label">快递单号</label>-->
+                                    <!--<input type="text" class="form-control" id="expressNumber" v-model="newExpress.expressNo" placeholder="输入快递单号">-->
+                                <!--</div>-->
+                                <!--<div class="form-group">-->
+                                    <!--<label for="company" class="control-label">快递公司</label>-->
+                                    <!--<input type="text" class="form-control" id="company" v-model="newExpress.company " placeholder="输入快递公司">-->
+                                <!--</div>-->
+                                <!--<div class="form-group">-->
+                                    <!--<label for="contact" class="control-label">手机号</label>-->
+                                    <!--<input type="tel" class="form-control" id="contact" v-model="newExpress.contact " placeholder="输入手机号">-->
+                                <!--</div>-->
+                            <!--</form>-->
+                        <!--</div>-->
+                        <!--<div class="modal-footer">-->
+                            <!--<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>-->
+                            <!--<button type="button" class="btn btn-primary"  @click="createExpress()">提交</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--点击修改快件的弹框-->
+            <div class="modal fade" id="expressTable" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title"  >快件详情</h4>
+                        </div>
+                        <div class="modal-body">
+                            <table class="table table-striped table-bordered table-hover">
+                                <thead >
+                                <th class="text-center" rowspan="2">快递单号</th>
+                                <th class="text-center" rowspan="2">快递公司</th>
+                                <th class="text-center" rowspan="2">收件人</th>
+                                <th class="text-center" rowspan="2" >寄件日期</th>
+                                <th class="text-center" rowspan="2" >到达日期</th>
+                                <th class="text-center" rowspan="2" >取件时间</th>
+                                <th class="text-center" rowspan="2">手机号码</th>
+                                <th class="text-center" rowspan="2">邮箱</th>
+                                <th class="text-center" rowspan="2">寄件地址</th>
+                                <th class="text-center" rowspan="2">收件地址</th>
+                                <th class="text-center" rowspan="2">快递状态</th>
+                                </thead>
+                                <tbody class="table-hover" >
+                                <tr class="active">
+                                    <td >{{express.expressNo}}</td>
+                                    <td>{{express.company}}</td>
+                                    <td>{{express.consignee}}</td>
+                                    <td>{{express.fromDate}}</td>
+                                    <td>{{express.arriveDate}}</td>
+                                    <td>{{express.receiveDate}}</td>
+                                    <td>{{express.contact}}</td>
+                                    <td>{{express.emailAddress}}</td>
+                                    <td>{{express.addressSource}}</td>
+                                    <td>{{express.addressDest}}</td>
+                                    <td>{{express.status}}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+
+
+
+            <!--快件查询表头、结果列表模版-->
+            <form class="form-inline" >
+                <label>货柜编号</label>
+                <div class="form-group">
+                    <input  type="type" autofocus class="form-control"  v-model="shelf.shelfId" placeholder="货柜编号"/>
+                </div>
+                <label>存放日期</label>
+                <div class="form-group">
+                    <input  class="form-control" type="date"
+                            maxlength="15"   placeholder="存放日期" v-model="shelf.createDate"/>
+                </div>
+                <label>货柜状态</label>
+                <div class="form-group">
+                    <select  v-model="shelf.shelfStatus" class="form-control">
+                        <option>N</option>
+                        <option>O</option>
+                    </select>
+                </div>
+
+                <button id="searchShelf" class="btn btn-primary" type="button" @click="getShelfList()" >
+                    <span class="glyphicon glyphicon-search"></span>查询
+                </button>
+                <button id="createShelf" class="btn btn-primary" type="button" @click="createModal()" >
+                    <span class="glyphicon glyphicon-plus"></span>新增货柜
+                </button>
+            </form>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-default" v-show="isShow">
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <table width="100%" class="table table-striped table-bordered table-hover">
+                                <thead >
+                                <th class="text-center" rowspan="2">货柜编号</th>
+                                <th class="text-center" rowspan="2" >存入日期</th>
+                                <th class="text-center" rowspan="2" >快件</th>
+                                <th class="text-center" rowspan="2">货柜状态</th>
+                                <th class="text-center" rowspan="2">操作</th>
+                                </thead>
+                                <tbody class="table-hover" v-for="s in shelfList" >
+                                <tr class="active">
+                                    <td >{{s.shelfId}}</td>
+                                    <td>{{s.createDate}}</td>
+                                    <td>
+                                        <a v-if="s.express!=null" href="javascript:void (0)" @click="showExpress(s.express)">快件详情</a>
+                                        <p v-else>未放入快件</p>
+                                    </td>
+                                    <td v-if="s.shelfStatus=='E'">待领取</td>
+                                    <td v-else="s.shelfStatus=='N'">空闲</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary" @click="openModal(e)">修改</button>
+                                        <button type="button" class="btn btn-primary" @click="notification(e)">移除快件</button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!--<div class=" bordered-table  text-center" v-show="isShow" >-->
+
+            <!--</div>-->
+        </div>
     </script>
 
     <script type="text/javascript" >
