重发验证码功能实现

--- a/WebContent/WEB-INF/html/express/index.html
+++ b/WebContent/WEB-INF/html/express/index.html
@@ -133,6 +133,11 @@
 					<div class="modal-content"></div>
 				</div>
 			</div>
+			<div id="informModal" class="modal fade">
+				<div class="modal-dialog" style="width: 50%; color: black">
+					<div class="modal-content"></div>
+				</div>
+			</div>
 		</div>
 		</div>
 	</section>
