--- a/WebContent/WEB-INF/html/express/index.html
+++ b/WebContent/WEB-INF/html/express/index.html
@@ -75,8 +75,8 @@
 			</div>
 		</div>
 	</div>
-	<hr />
-	<section id="express">
+	<hr/>
+	<section id="express" style="color:#ffffff;margin-top:30%">
 		<div class="container">
 			<div class="row">
 				<div
