修改快递查询页面标题位置

--- a/WebContent/WEB-INF/html/admin/sap.html
+++ b/WebContent/WEB-INF/html/admin/sap.html
@@ -313,7 +313,7 @@
 <script type="text/x-template" id="query-template">
     <div class="col-lg-offset-2 col-lg-10 col-md-offset-2 col-md-10 col-sm-offset-2 col-sm-10 text-center">
         <div class="col-lg-12">
-            <h1 class="page-header">查询快递</h1>
+            <h1 class="page-header col-md-7 col-md-offset-1 text-center">查询快递</h1>
         </div>
         <!--录入快件的模态框-->
         <div class="modal fade" id="createExpressModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
@@ -574,6 +574,9 @@
             <button id="createExpress" class="btn btn-primary" type="button" @click="createModal()" >
                 <span class="glyphicon glyphicon-plus"></span>录入快件
             </button>
+            <button id="export" class="btn btn-primary" type="button" @click="exportExpress()" >
+                <span class="glyphicon glyphicon-plus"></span>导出
+            </button>
 			</div>
         </form>
 
@@ -646,7 +649,7 @@
 
     <div class="col-lg-offset-2 col-lg-10 col-md-offset-2 col-md-10 col-sm-offset-2 col-sm-10 text-center">
         <div class="col-lg-12">
-            <h1 class="page-header">查询货柜</h1>
+            <h1 class="page-header col-md-7 col-md-offset-1 text-center">查询货柜</h1>
         </div>
 
         <!--点击修改快件的弹框-->
